<resources>
    <string name="app_name">הצגות אונליין</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Want to contribute to ADB?</string>
    <string name="nav_header_subtitle">support@3p-cups.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="share">שיתוף</string>

    <string name="menu_home">כל ההצגות</string>
    <string name="menu_summary">Summaries</string>
    <string name="menu_authors">Authors</string>
    <string name="menu_about">אודות</string>
    <string name="resources">אפליקציות נוספות</string>
    <string name="sigal">עיצוב ע\"י: סיגל אברמוביץ</string>


    <string name="menu_qa">סביבת בדיקות</string>
    <string name="search">חיפוש</string>
    <string name="search_query">הקלידו שם של הצגה</string>
    <string name="contact_us">דברו איתנו</string>
</resources>