<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.triPCups.blogs.showsOnline.ui.home.HomeFragment"
        tools:layout="@layout/fragment_home" >

         <argument android:name="categoryName" app:nullable="true" android:defaultValue="showsOnline" />

<!--        <action-->
<!--            android:id="@+id/action_nav_home_to_nav_about"-->
<!--            app:destination="@id/nav_about" />-->
<!--        <action-->
<!--            android:id="@+id/action_nav_home_to_nav_sumary"-->
<!--            app:destination="@id/nav_read_post" />-->
    </fragment>

<!--    //todo think about this-->
<!--    <fragment-->
<!--        android:id="@+id/nav_shows_by_theater"-->
<!--        android:name="com.triPCups.blogs.showsOnline.ui.read_post.ReadPostFragment"-->
<!--        tools:layout="@layout/fragment_read_post" >-->
<!--        <argument-->
<!--            android:name="read_post_from_menu_param"-->
<!--            android:defaultValue=""-->
<!--            app:argType="com.triPCups.blogs.base.models.BlogPost"-->
<!--            app:nullable="true" />-->
<!--        &lt;!&ndash;        <action&ndash;&gt;-->
<!--        &lt;!&ndash;            android:id="@+id/action_nav_home_to_nav_about"&ndash;&gt;-->
<!--        &lt;!&ndash;            app:destination="@id/nav_about" />&ndash;&gt;-->
<!--        &lt;!&ndash;        <action&ndash;&gt;-->
<!--        &lt;!&ndash;            android:id="@+id/action_nav_home_to_nav_sumary"&ndash;&gt;-->
<!--        &lt;!&ndash;            app:destination="@id/nav_read_post" />&ndash;&gt;-->
<!--    </fragment>-->


    <fragment
        android:id="@+id/nav_old_shows"
        android:name="com.triPCups.blogs.showsOnline.ui.read_post.ReadPostFragment"
        tools:layout="@layout/fragment_read_post" >

<!--        <argument android:name="categoryName" app:nullable="true" android:defaultValue="showsOnline" />-->

        <!--        <action-->
        <!--            android:id="@+id/action_nav_home_to_nav_about"-->
        <!--            app:destination="@id/nav_about" />-->
        <!--        <action-->
        <!--            android:id="@+id/action_nav_home_to_nav_sumary"-->
        <!--            app:destination="@id/nav_read_post" />-->
    </fragment>


<!--    <fragment-->
<!--        android:id="@+id/nav_summaries"-->
<!--        android:label="Summaries"-->
<!--        android:name="com.triPCups.blogs.showsOnline.ui.home.HomeFragment"-->
<!--        tools:layout="@layout/fragment_home">-->

<!--        <argument-->
<!--            android:name="categoryName"-->
<!--            app:nullable="true"-->
<!--            android:defaultValue="showsOnline.Summaries"/>-->
<!--    </fragment>-->

<!--    <fragment-->
<!--        android:id="@+id/nav_interview_questions"-->
<!--        android:name="com.triPCups.blogs.showsOnline.ui.home.HomeFragment"-->
<!--        android:label="Interview Questions"-->
<!--        tools:layout="@layout/fragment_home">-->

<!--        <argument-->
<!--            android:name="categoryName"-->
<!--            app:nullable="true"-->
<!--            android:defaultValue="showsOnline.InterviewQuestions"/>-->
<!--    </fragment>-->

<!--    <fragment-->
<!--        android:id="@+id/nav_assignments"-->
<!--        android:name="com.triPCups.blogs.showsOnline.ui.home.HomeFragment"-->
<!--        android:label="Assignments"-->
<!--        tools:layout="@layout/fragment_home">-->

<!--        <argument-->
<!--            android:name="categoryName"-->
<!--            app:nullable="true"-->
<!--            android:defaultValue="showsOnline.Assignments"/>-->
<!--    </fragment>-->

    <fragment
        android:id="@+id/nav_more_apps"
        android:name="com.triPCups.blogs.showsOnline.ui.more_apps.MoreAppsFragment"
        android:label="@string/resources"
        tools:layout="@layout/fragment_more_apps" />

    <fragment
        android:id="@+id/nav_read_post"
        android:name="com.triPCups.blogs.showsOnline.ui.read_post.ReadPostFragment"
        tools:layout="@layout/fragment_read_post" />

    <fragment
        android:id="@+id/nav_edit_post"
        android:name="com.triPCups.blogs.showsOnline.ui.edit_post.EditPostFragment"
        tools:layout="@layout/fragment_edit_post" />

    <fragment
        android:id="@+id/nav_contact"
        android:name="com.triPCups.blogs.showsOnline.ui.contact.ContactFragment"
        android:label="@string/contact_us"
        tools:layout="@layout/fragment_contact" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.triPCups.blogs.showsOnline.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_qa"
        android:name="com.triPCups.blogs.showsOnline.ui.home.HomeFragment"
        android:label="@string/menu_qa"
        tools:layout="@layout/fragment_home" >

        <argument android:name="categoryName" app:nullable="true" android:defaultValue="showsOnline.QA" />
    </fragment>
</navigation>